2009-10-04 Biru Ionut <ionut@archlinux.ro>
* gpsd-2.39-2
* added udev rule for automatically launching on
the proper device when pluging in the gps device.

2007-06-29 tardo <tardo@nagi-fanboi.net>
* Built for x86_64
* Removed all the unneccessary stuff, will
  probably clean out PKGBUILD on next upgrade