@@ -1,3 +1,6 @@
+2010-2-04 orbisvicis <orbisvicis@gmail.com>
+* Spruce up the PKGBUILD and associated files
+
 2009-10-04 Biru Ionut <ionut@archlinux.ro>
 * gpsd-2.39-2
 * added udev rule for automatically launching on
